--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "node": "18.16.0"
   },
   "scripts": {
-    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd Client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
-    "server": "cd server nodemon server.js --ignore client",
-    "build": "cd client && npm run build",
-    "install": "cd client && npm install",
-    "client": "cd client && npm start"
+    "server": "cd server nodemon server.js --ignore Client",
+    "build": "cd Client && npm run build",
+    "install": "cd Client && npm install",
+    "Client": "cd Client && npm start"
   },
   "keywords": [],
   "author": "",
