--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js --ignore Client"
+    "server": "nodemon server.js --ignore Develop/Client"
   },
   "keywords": [],
   "author": "",
