--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "serve": "^13.0.2"
+    "production": "^0.0.2",
+    "serve": "^13.0.2",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
